--- a/19.03.21-UprazhnenieKonstruktori/19.03.21-UprazhnenieKonstruktori.csproj
+++ b/19.03.21-UprazhnenieKonstruktori/19.03.21-UprazhnenieKonstruktori.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>_19._03._21_UprazhnenieKonstruktori</RootNamespace>
     <AssemblyName>19.03.21-UprazhnenieKonstruktori</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
